fix misaligned spinner in search tab

--- a/ui/box.css
+++ b/ui/box.css
@@ -118,7 +118,7 @@ th.p2p-col-delete a {
 	background: url("images/delete.png") no-repeat scroll 50% 50% transparent;
 }
 
-.p2p-tab-search .waiting {
+.p2p-search .waiting {
 	margin-left: -20px;
 	opacity: 0.8;
 	vertical-align: -0.3em;
